# complearn-svn

trunk/: complearn-gui_0.9.3-1.pkgpak  complearn-mpi_0.9.3-1.pkgpak  libcomplearn-ruby1.8_0.5.4-1.pkgpak  libcomplearn-ruby_0.5.4-1.pkgpak  libcomplearn_0.9.3-1.pkgpak  libcsoap_1.0.4-1.pkgpak  libcsoap_1.047-1.pkgpak
trunk/R/e1/: Makefile  rcomplearn.c  test.r
trunk/admin/: todos.txt
trunk/admin/scripts/: makealldist.zsh
trunk/clo/: Rakefile
trunk/complearn-mpi/: ChangeLog  Makefile.am  NEWS  README  README.txt  configure.ac
trunk/complearn-mpi/debian/: changelog  complearn-mpi.install  complearn-mpi.substvars  control  copyright  files  rules
trunk/complearn-mpi/doc/man/: partree.1
trunk/complearn-mpi/src/: Makefile.am  aclconfig.h.in  partree.c
trunk/core/: .svnignore  AUTHORS  COPYING  ChangeLog  Doxyfile.in  Makefile.am  README  README.txt  THANKS  acinclude.m4  complearn.m4  complearn.pc.in  configure.ac  extraconftest.ac  notes.txt
trunk/core/debian/: README.Debian  changelog  complearn-tools.install  conffiles.ex  control  copyright  cron.d.ex  docs  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  init.d.ex  libcomplearn-default.ex  libcomplearn-dev.install  libcomplearn.doc-base.EX  libcomplearn0.postinst  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu  postinst  postrm  preinst.ex  prerm  rules  shlibs.local  shlibs.local.ex  watch.ex
trunk/core/doc/: debpackages.txt  howtos.txt  notes.txt  todo.txt
trunk/core/doc/man/: complearn-config.1  complearn.5  maketree.1  ncd.1
trunk/core/examples/: .svnignore  15-eumembers.txt  Makefile.am  colors-nums.txt  config.yml  example-config.yml  perlsoapserver.pl
trunk/core/examples/dltest/: .svnignore  Makefile  Makefile.in  libart.c
trunk/core/examples/rubysoapserver/: hs.rb
trunk/core/examples/sampleapp/src/: rtest.c
trunk/core/newBeginning/: configure.ac
trunk/core/newBeginning/src/: Makefile.am
trunk/core/po/: POTFILES.in
trunk/core/scripts/: benchmark.rb  cldemoup  clversionup  complearn.nsi  complearndemo.nsi  cp2cldl  cp2svn  demomake.zsh  docserver.rb  externals.txt  forcefield.rb  gendepgraph.rb  gnuplot.cmd  laTeXforcefield.rb  mathform.math  mkwinbinzip.rb  ncdtest.rb  printcomp.pl  printgoog.rb  quicktest.zsh  randomconf.rb  reconf.zsh  searchreplace.zsh  showsymbols.zsh  t.rb  t2.pl  testrealcomp.sh  testvirtcomp.zsh  treetimes.rb
trunk/core/src/: .hgignore  .svnignore  Makefile.am  adjadaptor.c  adjlist.c  adjmatrix.c  anycompress.c  anydecompress.c  builtin.c  builtinca-blocksort.c  builtinca-bzlib.c  builtinca-bzlibx.c  builtinca-google.c  builtinca-lzma.c  builtinca-ppmcomp.c  builtinca-ppmdx.c  builtinca-realcomp.c  builtinca-soap.c  builtinca-virtcomp.c  builtinca-zlib.c  builtinta-unbzip.c  builtinta-ungz.c  builtinta-unzlib.c  clalloc.c  clbinfo.c  clfun.c  clmalloc.h  clnexus.c  clnodeset.c  clog.c  cloutput.c  clparser.c  clwrap.c  cnex.c  cnex.h  compadaptor.c  compilecmd.txt  complearn-compressor-driver.gob  complearn-config.c.in  complearn-environment.gob  (+97 more)
trunk/core/src/complearn/: aclconfig.h  aclconfig.h.in  adjadaptor.h  adjlist.h  adjmatrix.h  builtin.h  clalloc.h  clconfig.h  clconfig.h.in  clerror.h  clnodeset.h  clog.h  cloutput.h  clparser.h  cltypes.h  clwrap.h  compadaptor.h  complearn.h  complearndbus-server-wrapper.h  datablock.h  datablockenum.h  datetime.h  dbe-array.h  dbe-dir.h  dbe-factory.h  dbe-filelist.h  dbe-singleton.h  dbe-stringlist.h  dbe-windowed.h  dlextcomp.h  dotparser.h  doublea.h  dra.h  environment.h  envmap.h  galloc.h  gdbmhelper.h  google.h  googlecache.h  incrdm.h  (+40 more)
trunk/core/src/javanative/: CompLearnJ.java  CompLearnJImp.c  Makefile  makedll.bat  setpath.bat
trunk/core/src/rubyext/: complearn4r.c  extconf.rb  testtree.rb
trunk/core/test/pg4/: hello.txt.bz2  hello.txt.z
trunk/core/tests/: Makefile.am  check_cloutput.c  check_ncd.c
trunk/doc/: blurb.txt
trunk/gui/: ChangeLog  Makefile.am  NEWS  README  README.txt  configure.ac
trunk/gui/debian/: changelog  complearn-gui.doc-base.EX  control  copyright  rules
trunk/gui/doc/man/: clfun.1
trunk/gui/src/: Makefile.am  aclconfig.h.in  clfun.c  textsdl.c
trunk/libcsoap-package/: Makefile
trunk/libcsoap-package/libcsoap/libcsoap/: Makefile.am
trunk/libcsoap-package/libcsoap/libcsoap/CVS/: Entries  Repository
trunk/libcsoap-package/libcsoap/libcsoap/libxml/CVS/: Repository
trunk/ruby/: .svnignore  AUTHORS  COPYING  INSTALL  Makefile.am  README  adja.c  clrbcon.h  compa.c  compadaptor.c  complearn4r.c  configure.ac  conversions.c  conversions.h  incrdm.c  setup.rb  simpletest.rb  springball.c  testAdja.rb  testSBS.rb  testTreeM.rb  tra.c  treeadaptor.c  treeholder.c  treemaster.c  treeobserver.c  tst.rb  tth.rb
trunk/ruby/debian/: README.Debian  changelog  control  copyright  rules
trunk/ruby/doc/: notes.txt
trunk/ruby/examples/: author_search.rb  closematch.rb
trunk/ruby/ext/: .svnignore  Makefile.am
trunk/ruby/ext/complearn/: .svnignore  MANIFEST  adja.c  clrbcon.h  compbase.c  complearn4r.c  conversions.c  conversions.h  extconf.rb  incrdm.c  nexus.c  springball.c  treeadaptor.c  treeholder.c  treemaster.c
trunk/ruby/lib/: complearn.rb
trunk/ruby/scripts/: reconf.zsh
trunk/ruby/src/: adja.c  clrbcon.h  compadaptor.c  compbase.c  complearn4r.c  conversions.c  conversions.h  extconf.rb  incrdm.c  springball.c  treeadaptor.c  treeholder.c  treemaster.c
trunk/ruby/tests/: clClient.rb  clMonitor.rb  clServer.rb  clcommon.rb  simpletest.rb  testAdja.rb  testCompBase.rb  testIncrDM.rb  testMarshal.rb  testNexus.rb  testSBS.rb  testTreeM.rb
trunk/rubyext/: tst.rb
trunk/www/: 34mammals-dm.txt  34mammals-rooted-dot.txt  34mammals-unrooted-dot.txt  colors-nums-unrooted-dot.txt  complearn.css  config.html  contact.html  developers.html  documentation.html  download.html  example-colors-numbers.html  example-colors-nums-dm.txt  example-mammals.html  example-speeches.html  faq.html  index.html  installation.html  license.html  ncd.html  newncd.html  quickstart.html  rudereply.html  speeches-dm.txt  speeches-unrooted-dot.txt  sponsors.html
(+153 files in other folders)
