SUBDIRS = src examples
am__CONFIG_DISTCLEAN_FILES = src/complearn/aclconfig.h.in

EXTRA_DIST = \
$(src) \
$(doc) \
$(examples) \
$(debstuff) \
$(scripts)



man_MANS = \
doc/man/complearn.5 \
doc/man/maketree.1 \
doc/man/ncd.1

src = \
src/complearn/aclconfig.h \
src/complearn/uclconfig.h \
src/adjadaptor.c \
src/complearn/adjadaptor.h \
src/adjmatrix.c \
src/complearn/adjmatrix.h \
src/adjlist.c \
src/complearn/adjlist.h \
src/clmalloc.h \
src/builtin.c \
src/builtinca-bzlib.c \
src/builtinca-google.c \
src/builtinca-realcomp.c \
src/builtinca-soap.c \
src/builtinca-virtcomp.c \
src/builtinca-zlib.c \
src/builtinca-blocksort.c \
src/qsufsort.c \
src/complearn/builtin.h \
src/builtinta-unbzip.c \
src/builtinta-ungz.c \
src/builtinta-unzlib.c \
src/complearn/clconfig.h \
src/complearn/clconfig.h.in \
src/complearn/clerror.h \
src/clnodeset.c \
src/complearn/clnodeset.h \
src/cloutput.c \
src/complearn/cloutput.h \
src/unrootedbinary.c \
src/complearn/unrootedbinary.h \
src/complearn/cltypes.h \
src/compadaptor.c \
src/complearn/compadaptor.h \
src/complearn/complearn.h \
src/datablock.c \
src/complearn/datablockenum.h \
src/complearn/datablock.h \
src/datetime.c \
src/complearn/datetime.h \
src/dbe-array.c \
src/complearn/dbe-array.h \
src/dbe-dir.c \
src/complearn/dbe-dir.h \
src/dbe-factory.c \
src/complearn/dbe-factory.h \
src/dbe-filelist.c \
src/complearn/dbe-filelist.h \
src/dbe-singleton.c \
src/complearn/dbe-singleton.h \
src/dbe-stringlist.c \
src/complearn/dbe-stringlist.h \
src/dbe-windowed.c \
src/complearn/dbe-windowed.h \
src/dlextcomp.c \
src/complearn/dlextcomp.h \
src/doublea.c \
src/complearn/doublea.h \
src/environment.c \
src/complearn/environment.h \
src/envmap.c \
src/complearn/envmap.h \
src/clalloc.c \
src/complearn/clalloc.h \
src/gdbmhelper.c \
src/complearn/gdbmhelper.h \
src/google.c \
src/googlecache.c \
src/complearn/googlecache.h \
src/complearn/google.h \
src/incrdm.c \
src/complearn/incrdm.h \
src/labelmaker.c \
src/complearn/labelmaker.h \
src/labelperm.c \
src/complearn/labelperm.h \
src/maketree.c \
src/matfact.c \
src/complearn/maketreeapp.h \
src/complearn/matfact.h \
src/mutate.c \
src/complearn/mutate.h \
src/ncd.c \
src/ncd-calc.c \
src/complearn/ncd-calc.h \
src/complearn/ncdapp.h \
src/paramlist.c \
src/complearn/paramlist.h \
src/pathkeeper.c \
src/complearn/pathkeeper.h \
src/quartet.c \
src/complearn/quartet.h \
src/complearn/quartetobs.h \
src/rootedbinary.c \
src/complearn/rootedbinary.h \
src/runtests.c \
src/sdlgl.c \
src/springball.c \
src/complearn/springball.h \
src/stringstack.c \
src/complearn/stringstack.h \
src/svdproj.c \
src/tagfile.c \
src/complearn/tagfile.h \
src/complearn/tagtypes.h \
src/tastack.c \
src/complearn/tastack.h \
src/textsdl.c \
src/complearn/textsdl.h \
src/complearn/transadaptor.h \
src/treeadaptor.c \
src/complearn/treeadaptor.h \
src/treeholder.c \
src/complearn/treeholder.h \
src/treemolder.c \
src/complearn/treemolder.h \
src/treeblaster.c \
src/complearn/treeblaster.h \
src/treemaster.c \
src/complearn/treemaster.h \
src/treescore.c \
src/complearn/treescore.h \
src/treeparser.c \
src/complearn/treeparser.h \
src/clparser.c \
src/complearn/clparser.h

doc = \
doc/notes.txt \
doc/howtos.txt \
doc/man/complearn.5 \
doc/man/maketree.1 \
doc/man/ncd.1

examples = \
examples/example-config.yml \
examples/dltest/libart.c \
examples/dltest/Makefile.in \
examples/perlsoapserver.pl \
examples/rubysoapserver/hs.rb \
examples/speeches/bush-911-address \
examples/speeches/edkennedy-RFK-eulogy \
examples/speeches/fdr-first-inaugural \
examples/speeches/fdr-pearl-harbor \
examples/speeches/jfk-civil-rights-address \
examples/speeches/jfk-cuban-missile-crisis \
examples/speeches/jfk-inaugural-address \
examples/speeches/lincoln-gettysburg \
examples/speeches/mlk-i-have-a-dream \
examples/speeches/mlk-mountaintop \
examples/speeches/mx-ballot-or-bullet \
examples/speeches/reagan-challenger \
examples/speeches/reagan-evil-empire \
examples/speeches/reagan-first-inaugural \
examples/speeches/rfk-mlk-assassination \
examples/speeches/troosevelt-muckrake \
examples/speeches/wilson-inaugural \
examples/speeches/wilson-war-message \
examples/34-mammals/aardvark \
examples/34-mammals/armadillo \
examples/34-mammals/baboon \
examples/34-mammals/blueWhale \
examples/34-mammals/cat \
examples/34-mammals/chimpanzee \
examples/34-mammals/cow \
examples/34-mammals/dog \
examples/34-mammals/donkey \
examples/34-mammals/elephant \
examples/34-mammals/fatDormouse \
examples/34-mammals/finWhale \
examples/34-mammals/fruitBat \
examples/34-mammals/gibbon \
examples/34-mammals/gorilla \
examples/34-mammals/graySeal \
examples/34-mammals/guineaPig \
examples/34-mammals/harborSeal \
examples/34-mammals/hippopotamus \
examples/34-mammals/horse \
examples/34-mammals/human \
examples/34-mammals/indianRhinoceros \
examples/34-mammals/mouse \
examples/34-mammals/opossum \
examples/34-mammals/orangutan \
examples/34-mammals/pig \
examples/34-mammals/pigmyChimpanzee \
examples/34-mammals/platypus \
examples/34-mammals/rabbit \
examples/34-mammals/rat \
examples/34-mammals/sheep \
examples/34-mammals/squirrel \
examples/34-mammals/wallaroo \
examples/34-mammals/whiteRhinoceros \
examples/10-mammals/blueWhale.txt \
examples/10-mammals/cat.txt \
examples/10-mammals/chimpanzee.txt \
examples/10-mammals/finWhale.txt \
examples/10-mammals/graySeal.txt \
examples/10-mammals/harborSeal.txt \
examples/10-mammals/horse.txt \
examples/10-mammals/human.txt \
examples/10-mammals/mouse.txt \
examples/10-mammals/rat.txt \
examples/colors-nums.txt \
examples/15-eumembers.txt

scripts = \
scripts/reconf.zsh \
scripts/testrealcomp.sh \
scripts/testvirtcomp.zsh

debstuff = \
debian/changelog \
debian/compat \
debian/control \
debian/copyright \
debian/dirs \
debian/docs \
debian/libcomplearn1.dirs \
debian/libcomplearn1.install \
debian/libcomplearn-dev.dirs \
debian/libcomplearn-dev.install \
debian/libcomplearn.doc-base.EX \
debian/manpage.1.ex \
debian/manpage.sgml.ex \
debian/manpage.xml.ex \
debian/menu \
debian/postinst \
debian/postrm \
debian/preinst \
debian/prerm \
debian/README.Debian \
debian/rules \
debian/shlibs.local
