SUBDIRS = src
am__CONFIG_DISTCLEAN_FILES = src/complearn/aclconfig.h.in

pkgconfigdir = $(libdir)/pkgconfig
pkgconfig_DATA = complearn.pc

EXTRA_DIST = \
$(src) \
$(doc) \
$(examples) \
$(scripts)

man_MANS = \
doc/man/complearn.5 \
doc/man/maketree.1 \
doc/man/ncd.1

src = \
complearn.pc.in \
src/complearn/maketreeapp.h \
src/complearn/ncdapp.h

doc = \
doc/notes.txt \
doc/howtos.txt \
doc/man/complearn.5 \
doc/man/maketree.1 \
doc/man/ncd.1

examples = \
examples/example-config.yml \
examples/dltest/libart.c \
examples/dltest/Makefile.in \
examples/perlsoapserver.pl \
examples/rubysoapserver/hs.rb \
examples/speeches/bush-911-address \
examples/speeches/edkennedy-RFK-eulogy \
examples/speeches/fdr-first-inaugural \
examples/speeches/fdr-pearl-harbor \
examples/speeches/jfk-civil-rights-address \
examples/speeches/jfk-cuban-missile-crisis \
examples/speeches/jfk-inaugural-address \
examples/speeches/lincoln-gettysburg \
examples/speeches/mlk-i-have-a-dream \
examples/speeches/mlk-mountaintop \
examples/speeches/mx-ballot-or-bullet \
examples/speeches/reagan-challenger \
examples/speeches/reagan-evil-empire \
examples/speeches/reagan-first-inaugural \
examples/speeches/rfk-mlk-assassination \
examples/speeches/troosevelt-muckrake \
examples/speeches/wilson-inaugural \
examples/speeches/wilson-war-message \
examples/34-mammals/aardvark \
examples/34-mammals/armadillo \
examples/34-mammals/baboon \
examples/34-mammals/blueWhale \
examples/34-mammals/cat \
examples/34-mammals/chimpanzee \
examples/34-mammals/cow \
examples/34-mammals/dog \
examples/34-mammals/donkey \
examples/34-mammals/elephant \
examples/34-mammals/fatDormouse \
examples/34-mammals/finWhale \
examples/34-mammals/fruitBat \
examples/34-mammals/gibbon \
examples/34-mammals/gorilla \
examples/34-mammals/graySeal \
examples/34-mammals/guineaPig \
examples/34-mammals/harborSeal \
examples/34-mammals/hippopotamus \
examples/34-mammals/horse \
examples/34-mammals/human \
examples/34-mammals/indianRhinoceros \
examples/34-mammals/mouse \
examples/34-mammals/opossum \
examples/34-mammals/orangutan \
examples/34-mammals/pig \
examples/34-mammals/pigmyChimpanzee \
examples/34-mammals/platypus \
examples/34-mammals/rabbit \
examples/34-mammals/rat \
examples/34-mammals/sheep \
examples/34-mammals/squirrel \
examples/34-mammals/wallaroo \
examples/34-mammals/whiteRhinoceros \
examples/10-mammals/blueWhale.txt \
examples/10-mammals/cat.txt \
examples/10-mammals/chimpanzee.txt \
examples/10-mammals/finWhale.txt \
examples/10-mammals/graySeal.txt \
examples/10-mammals/harborSeal.txt \
examples/10-mammals/horse.txt \
examples/10-mammals/human.txt \
examples/10-mammals/mouse.txt \
examples/10-mammals/rat.txt \
examples/colors-nums.txt \
examples/15-eumembers.txt

scripts = \
scripts/reconf.zsh \
scripts/testrealcomp.sh \
scripts/testvirtcomp.zsh
